<resources>
    <!-- Strings related to titles -->
    <string name="app_name">SpendShamer</string>
    <string name="expense_list_title">YOUR EXPENSES</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="add_a_new_expense">Add a new expense</string>

    <!-- Strings related to hints -->
    <string name="hint_expense_cost">Expense Cost (XX.XX)</string>
    <string name="hint_expense_source">Expense Name</string>
    <string name="expense_date_dd_mm_yyyy">Expense Date (DD/MM/YYYY)</string>

    <!-- Strings related to buttons -->
    <string name="add_expense">Add Expense</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>