<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ExpenseMakerActivity">

    <EditText
        android:id="@+id/input_cost"
        android:hint="@string/hint_expense_cost"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="132dp"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_source"
        android:layout_width="275dp"
        android:layout_height="66dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="91dp"
        android:hint="@string/hint_expense_source"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/input_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_cost"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/input_date"
        android:layout_width="275dp"
        android:layout_height="66dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="137dp"
        android:hint="@string/expense_date_dd_mm_yyyy"
        app:layout_constraintBottom_toTopOf="@+id/button_addExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="28dp"
        android:enabled="false"
        android:text="@string/add_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="48dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="38dp"
        android:gravity="center"
        android:text="@string/add_a_new_expense"
        app:layout_constraintBottom_toTopOf="@+id/input_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>